...
                rowAlbums.forEach { album ->
                    ArtistTopAlbumTileMolecule(
                        album = album,
                        onClick = onAlbumClick,
                        modifier = Modifier
                            .weight(1f)
                            .testTag("artist_top_album"),
                    )
                }
                if (rowAlbums.size == 1) {
                    Spacer(modifier = Modifier.weight(1f))
                }
            }
...
